objects/Project_Defect__c.object
<CustomObject>
    <fields>
        <fullName>Test_Case_Execution_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case Execution Id</label>
        <referenceTo>Test_Case_Execution__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Step_Execution_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Step Execution Id</label>
        <referenceTo>Test_Step_Execution__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the defected Test Step</description>
        <label>Test Step</label>
        <referenceTo>Test_Step__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>